# qft

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json
apps/client/: README.md  package.json  vite.config.ts
apps/client/src/: App.tsx  main.tsx
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/src/: client.rs  commands.rs  event.rs  main.rs
apps/client/src/common/: toast.ts
apps/client/src/modals/: NewTaskModal.tsx
apps/client/src/types/: task.ts
apps/server/: .eslintrc.cjs  .prettierignore  README.md  package.json  vite.config.ts
apps/server/src/: App.tsx  main.tsx
apps/server/src-tauri/: Cargo.toml  tauri.conf.json
apps/server/src-tauri/src/: commands.rs  event.rs  main.rs  server.rs
apps/server/src/modals/: CertModal.tsx
apps/server/src/types/: task.ts
src/client/: main.rs
src/common/: erasure.rs  flags.rs  mod.rs
src/server/: cert.rs  main.rs
