[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = ["api-all"] }
uuid = { version = "1", features = ["v4"] }
anyhow = { version = "1" }
rustls = { version = "0.21.0", features = ["quic", "dangerous_configuration"] }
tokio = { version = "1", features = ["full"] }
quinn = { version = "0.10" }
rcgen = { version = "0.12.0" }
once_cell = { version = "1" }
bytes = { version = "1" }
rust-common = { version = "*", path = "../../../packages/rust-common" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
